--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/kferg357/employee_tracker#readme",
   "dependencies": {
     "add": "^2.0.6",
+    "clib": "^0.2.0",
+    "console.table": "^0.10.0",
+    "inquirer": "^8.1.1",
+    "mysql": "^2.18.1",
     "table": "^6.7.1",
     "update": "^0.7.4"
   }
